# mids-207-project-chagas

./: .gitignore  README.md  Test.ipynb  pyproject.toml  streamlit_app.py
data/: CNN-txp.ipynb
notebooks/: CNN.ipynb  RF model.ipynb  baseline_decision_tree.ipynb  code15_EDA.ipynb  code15_EDA_txp.ipynb  converter.ipynb  convnextv2.ipynb  data_explore.ipynb  data_preparation.ipynb  eda_claire_peng.ipynb  eda_jonah_karpman.ipynb  eda_river_jiang.ipynb  helper_code.py
