[project]
name = "mids-ds207"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "altair>=5.5.0",
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "keras>=3.10.0",
    "keras-tuner>=1.4.7",
    "matplotlib>=3.10.3",
    "mlxtend>=0.23.4",
    "nbformat>=5.10.4",
    "plotly>=6.2.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "tensorflow-datasets>=4.9.9",
    "tensorflow-metal>=1.2.0",
]

[tool.uv.workspace]
members = [
    "final project/src",
]
